workspace = { members = ["ldapcore"] }
[package]
name = "rustldap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldapcore = {path = "ldapcore/"}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ldap3 = "0.11"
regex = "1"
prettytable = "0.10"
#web
axum = "0.7"
tokio = { version = "1.3", features = ["rt", "rt-multi-thread", "macros"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mockall ="0.12.1"
base64 = "0.21"
chrono = "0.4"

[dev-dependencies]
assert_fs = "1.1"