[package]
name = "ldapcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ldap3 = "0.11"
tokio = { version = "1.3", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "1"